Change how file header, package name, and imports are handled